# duolingo

./: CMakeLists.txt  README.md  main.cpp
model/: model.cpp  model.h
presenter/: presenter.cpp  presenter.h
resources/: default_settings.json  resources.qrc  sound.json  verbs.json
tools/: file_loader.cpp  file_loader.h  pick_an_option_task.h  random.h  tools.cpp  tools.h
view/: audio_task.cpp  audio_task.h  input_answer.cpp  input_answer.h  mixed_task.cpp  mixed_task.h  pick_an_option.cpp  pick_an_option.h  task_window.cpp  task_window.h  view.cpp  view.h  win_scene.cpp  win_scene.h
